# mesh-llm

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  HUMANS.md  Justfile  LLAMA_CPP_SHA  LLAMA_SEC.md  MLX_ROADMAP.md  MLX_VALIDATION_MATRIX.md  PLUGINS.md  PLUGINS_PLAN.md  Package.swift  README.md  RELEASE.md  ROADMAP.md  SKIPPY_PROTOCOL_TODO.md  benchmark.md  clippy.toml  fix-summary.md  install.sh  playwright.config.js  quicktest-client.sh  quicktest-gemma.sh  spec.md
commitllm-plugin/: Cargo.toml  README.md
commitllm-plugin/src/: main.rs
crates/llama-model-slice/: Cargo.toml  README.md
crates/llama-model-slice/src/: main.rs
crates/mesh-api-ffi/: Cargo.toml  README.md  build.rs
crates/mesh-api-ffi/src/: lib.rs  mesh_ffi.udl
crates/mesh-api-ffi/tests/: client_exports_compile.rs  error_mapping.rs  live_sdk_smoke.rs  smoke.rs
crates/mesh-llm/: Cargo.toml  README.md  TODO.md  build.rs
crates/mesh-llm-guardrails/: Cargo.toml
crates/mesh-llm-guardrails/src/: backend.rs  compact.rs  error_tracker.rs  facade.rs  lib.rs  nudges.rs  rescue.rs  respond.rs  step_enforcer.rs  types.rs  validator.rs
crates/mesh-llm-identity/: Cargo.toml  README.md
crates/mesh-llm-identity/src/: envelope.rs  keys.rs  lib.rs  provider.rs
crates/mesh-llm-protocol/: Cargo.toml  README.md
crates/mesh-llm-protocol/proto/: node.proto
crates/mesh-llm-protocol/src/: lib.rs
crates/mesh-llm-protocol/src/proto/: node.rs
crates/mesh-llm-protocol/src/protocol/: mod.rs
crates/mesh-llm-routing/: Cargo.toml  README.md
crates/mesh-llm-routing/src/: lib.rs
crates/mesh-llm-system/: Cargo.toml  README.md
crates/mesh-llm-system/src/: autoupdate.rs  backend.rs  benchmark.rs  benchmark_prompts.rs  hardening.rs  hardware.rs  lib.rs  process.rs  release_target.rs
crates/mesh-llm-system/src/autoupdate/: bundle_install.rs  entrypoints.rs  mod.rs  release_metadata.rs  tests.rs  update_target.rs
crates/mesh-llm-system/src/benchmark/: discovery.rs  fingerprint.rs  mod.rs  persistence.rs  runner.rs  tests.rs
crates/mesh-llm-system/src/hardware/: collectors.rs  enrichers.rs  gpu_facts.rs  mod.rs  parsers.rs  query.rs  skippy_devices.rs  tests.rs  vulkan.rs
crates/mesh-llm-types/: Cargo.toml  README.md
crates/mesh-llm-types/src/: lib.rs
crates/mesh-llm-types/src/mesh/: mod.rs
crates/mesh-llm-types/src/models/: capabilities.rs  mod.rs
crates/mesh-llm-ui/: .prettierignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  build.rs  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/mesh-llm-ui/e2e/smoke/: chat-mobile.spec.ts  home.spec.ts  live-parity.spec.ts  topnav-responsive.spec.ts
crates/mesh-llm-ui/preview/: .gitignore  default-system-prompt.md  playwright.config.ts
crates/mesh-llm-ui/preview/src/: app.tsx
crates/mesh-llm-ui/src/: App.test.tsx  App.tsx  index.css  lib.rs  main.tsx  vite-env.d.ts
crates/mesh-llm-ui/src/components/: ErrorBoundary.tsx  brand-icon.tsx  mesh-llm-wordmark.tsx
crates/mesh-llm-ui/src/constants/: default-system-prompt.md  system-prompt.ts
crates/mesh-llm-ui/src/lib/: attachments.test.ts  attachments.ts  chatExports.ts  copyStateLabel.ts  env.ts  format-duration.test.ts  format-duration.ts  format-latency.test.ts  format-latency.ts  image-describe.test.ts  image-describe.ts  resolved-theme.ts  streaming.test.ts  streaming.ts
crates/mesh-llm-ui/src/test/: setup.ts
crates/mesh-llm/proto/: node.proto
crates/mesh-llm/src/: exact_test_wrappers.rs  lib.rs  main.rs
crates/mesh-llm/tests/: protocol_compat_v0_client.rs  protocol_convert_matrix.rs  qa_control_plane_harness.rs  virtual_llm_injection.rs
crates/mesh-llm/ui-legacy/: package-lock.json  package.json
crates/mesh-llm/ui-preview/: .prettierignore  DESIGN.json  DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.latency-test.config.mjs
crates/metrics-server/: Cargo.toml  README.md
crates/metrics-server/src/: api.rs  cli.rs  fixture.rs  lib.rs  main.rs  model.rs  otlp.rs  otlp_value.rs  server.rs  store.rs  util.rs
crates/moa-gateway/: Cargo.toml
crates/moa-gateway/src/: arbiter.rs  context.rs  lib.rs  normalize.rs  session.rs  worker.rs
crates/model-artifact/: Cargo.toml  README.md
crates/model-artifact/src/: gguf.rs  lib.rs
crates/model-hf/: Cargo.toml  README.md
crates/model-hf/src/: lib.rs
crates/model-hf/tests/: hf_download.rs
crates/model-package/: Cargo.toml  build.rs
crates/model-package/src/: certify.rs  jobs.rs  lib.rs  prepare.rs  script.rs
crates/model-resolver/: Cargo.toml
crates/model-resolver/src/: catalog.rs  hf_catalog.rs  lib.rs  refs.rs  resolve.rs  types.rs
crates/openai-frontend/: Cargo.toml  README.md
crates/openai-frontend/src/: backend.rs  chat.rs  common.rs  completions.rs  errors.rs  hooks.rs  lib.rs  models.rs  responses.rs  router.rs  sse.rs
crates/openai-frontend/tests/: benchy_contract.rs
crates/skippy-bench/: Cargo.toml  README.md
crates/skippy-bench/corpora/: bench_corpus_sources.json  chat_corpus_fixture.jsonl  kv_mixed_prompts.jsonl  speculative_coding_prompts.jsonl
crates/skippy-bench/src/: chat_corpus.rs  cli.rs  distributed.rs  local_single.rs  local_split.rs  main.rs  model_identity.rs  support.rs  token_lengths.rs
crates/skippy-cache/: Cargo.toml  README.md  TODO.md
crates/skippy-cache/src/: config.rs  exact_state.rs  identity.rs  lib.rs  prefix_state.rs
crates/skippy-correctness/: Cargo.toml  README.md
crates/skippy-correctness/src/: cli.rs  main.rs  report.rs  runner.rs  support.rs
crates/skippy-correctness/tests/: parity_models.rs
crates/skippy-prompt/: Cargo.toml  README.md
crates/skippy-prompt/src/: main.rs
crates/skippy-server/: Cargo.toml  README.md
crates/skippy-server/src/: binary_transport.rs  cli.rs  config.rs  embedded.rs  frontend.rs  http.rs  kv_integration.rs  kv_proto.rs  lib.rs  main.rs  openai.rs  package.rs  runtime_state.rs  telemetry.rs
mesh-api/: Cargo.toml
mesh-api/tests/: public_api.rs
(+2047 files in other folders)
