[package]
name = "mesh-api"
version = "0.65.0-rc1"
edition = "2021"
description = "Public Rust SDK for embedding Mesh LLM clients in applications"
license = "Apache-2.0"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"
keywords = ["llm", "mesh", "sdk", "api", "client"]
categories = ["api-bindings", "network-programming"]

[features]
host-io = ["mesh-client/host-io"]

[dependencies]
mesh-client = { package = "mesh-llm-client", version = "0.65.0-rc1", path = "../mesh-client" }
hex = "0.4"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
