[package]
name = "mesh-llm-identity"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Shared owner identity, signing, and envelope crypto for Mesh LLM crates"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"

[dependencies]
crypto_box = "0.9"
ed25519-dalek = { version = "=3.0.0-pre.6", features = ["rand_core"] }
hex = "0.4"
rand = "0.10"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror = "2"
