[package]
name = "mesh-llm-ui"
version = "0.65.1"
edition = "2021"
description = "Embedded Mesh LLM web console assets"
license = "Apache-2.0"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"

[dependencies]
include_dir = "0.7"
