[package]
name = "mesh-llm"
version.workspace = true
edition = "2021"

[features]
default = ["web-ui"]
# Embed the React web console into the binary. Default on so the shipped
# binary keeps shipping the console; turn off (`--no-default-features`)
# for a lean variant that drops the embedded UI assets.
web-ui = ["mesh-llm-host-runtime/web-ui"]
gpu-bench-cuda = ["mesh-llm-host-runtime/gpu-bench-cuda"]
gpu-bench-hip = ["mesh-llm-host-runtime/gpu-bench-hip"]
gpu-bench-intel = ["mesh-llm-host-runtime/gpu-bench-intel"]

[lints]
workspace = true

[dependencies]
mesh-llm-host-runtime = { path = "../mesh-llm-host-runtime", default-features = false }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
axum = "0.8"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3"
mesh-client = { package = "mesh-llm-client", path = "../mesh-client" }
serde_json = "1"
tempfile = "3"
