[package]
name = "metrics-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8"
clap.workspace = true
rusqlite = { version = "0.37", features = ["bundled"] }
skippy-metrics = { path = "../skippy-metrics" }
opentelemetry-proto = "0.31.0"
prost = "0.14"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tonic = "0.14"
