[package]
name = "skippy-correctness"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
skippy-protocol = { path = "../skippy-protocol" }
skippy-runtime = { path = "../skippy-runtime" }
model-artifact = { path = "../model-artifact" }
model-hf = { path = "../model-hf" }
model-ref = { path = "../model-ref" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
