[package]
name = "skippy-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "skippy_server"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum = "0.8"
clap.workspace = true
futures-util = "0.3"
skippy-runtime = { path = "../skippy-runtime" }
skippy-protocol = { path = "../skippy-protocol" }
skippy-metrics = { path = "../skippy-metrics" }
openai-frontend = { path = "../openai-frontend" }
opentelemetry-proto = "0.31.0"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
socket2 = "0.6"
libc = "0.2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tonic = "0.14"

[dev-dependencies]
tempfile = "3"
